// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider renders default 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: middle;
  border-color: #ebebeb;
  border-style: solid;
  border-width: 0 0 1px 0;
  width: 100%;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Divider renders horizontal 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: middle;
  border-color: #ebebeb;
  border-style: solid;
  border-width: 0 0 1px 0;
  width: 100%;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Divider renders vertical 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: middle;
  border-width: 0 0 0 1px;
  border-image: initial;
  border-color: #ebebeb;
  border-style: dashed;
  height: 1em;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;
